# upgradeUpstox

./: .env  check_db.py  check_redis.py  docker-compose.yml  get_token.py  init_db.py  main.py  pyproject.toml  real_market_data.json  show_real_data.py  test_api.py
app/analytics/: greeks_analyzer.py  imbalance_detector.py  pattern_detector.py  sentiment_analyzer.py  whale_detector.py
app/api/: main.py
app/core/: time_utils.py
app/dashboard/: app.py
app/db/: __init__.py  postgres_client.py  redis_client.py  schema.sql
app/services/: __init__.py  ingestion.py  instruments.py  processor.py
app/workers/: signal_generator.py
tests/: test_greeks_analyzer.py  test_imbalance_detector.py  test_pattern_detector.py  test_sentiment_analyzer.py  test_whale_detector.py
